--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^150.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "uuid": "^11.1.0"
   }
 }
