--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "spinners-react": "^1.0.11",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
