--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,17 @@
     "@monaco-editor/react": "^4.7.0",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.10",
+    "marked": "^16.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.6.2",
+    "react-spinners": "^0.17.0",
+    "react-to-pdf": "^2.0.1",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "spinners-react": "^1.0.11",
     "tailwindcss": "^4.1.10"
   },
