--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "nodemailer": "^7.0.3",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   }
 }
