--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
+    "start":"node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
