--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,14 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start":"node ./app.js",
+    "start": "node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cookie-signature": "^1.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
